<resources>
    <string name="app_name">Rx</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rconnector">rConnector</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_email">Login / Email</string>
    <string name="create_account">Create Account</string>
    <string name="createAccount">Create Account</string>
    <string name="email">Email</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="create">Create</string>
    <string name="emptyFieldError">Fill all the fields</string>
    <string name="passwordRepeatPasswordError">Password and repeat password are different!</string>
    <string name="userInfo">User Info</string>
    <string name="profile">Profile</string>
    <string name="my_groups">My Groups</string>
    <string name="create_new_group">Create New Group</string>
    <string name="logout">Logout</string>
    <string name="image_capture_no_camera">No Camera Available!</string>
    <string name="createNewGroup">Create New Group</string>
    <string name="myGroups">My Groups</string>
    <string name="send">Send</string>
    <string name="new_message">New Message</string>
    <string name="addUser">Add User</string>
    <string name="removeUser">Remove User</string>
    <string name="editGroup">Edit Group</string>
    <string name="send_pn">Send PN</string>
    <string name="collapse_buttons">Collapse Buttons</string>
    <string name="add">Add</string>
    <string name="user_login_email">User login / email</string>
    <string name="remove">Remove</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_text">Notification text</string>
    <string name="pickImageFromGallery">Pick Image from Gallery</string>
    <string name="send_notification">Send notification</string>
    <string name="calling">Calling</string>
    <string name="start_call">Start call</string>
    <string name="webrtc">Webrtc</string>
    <string name="webrtchost">http://10.0.3.2:3001/</string>
</resources>
