<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/leftBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <Button
                android:id="@+id/addUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="10dp"
                android:text="@string/addUser" />

            <Button
                android:id="@+id/removeUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/removeUser" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middleBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/chatList"
                android:layout_width="300dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <Button
                android:id="@+id/editGroupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="10dp"
                android:text="@string/editGroup" />

            <Button
                android:id="@+id/sendPNButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="10dp"
                android:text="@string/send_pn" />

            <Button
                android:id="@+id/startCallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="10dp"
                android:text="@string/start_call" />

            <Button
                android:id="@+id/collapseButtonsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="10dp"
                android:text="@string/collapse_buttons" />

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/sendField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/new_message"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/send" />

</LinearLayout>